# equinox

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml  docker.yml
l4/: Cargo.toml  build.rs
l4-common/: Cargo.toml
l4-common/src/: lib.rs
l4-ebpf/: Cargo.toml
l4-ebpf/src/: main.rs
l4/src/: config.rs  dataplane.rs  discovery.rs  health.rs  maglev.rs  main.rs  metrics.rs
landing/: index.html  script.js  styles.css
